fix workflow